kubernetes/template/12-selenium-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selenium-server-${x0_SELENIUM_SERVER_INDEX}
  namespace: ${x0_NAMESPACE}
  labels:
    app: selenium-server-${x0_SELENIUM_SERVER_INDEX}
spec:
  serviceAccountName: ci-builder
  automountServiceAccountToken: false
  hostname: selenium-server-${x0_SELENIUM_SERVER_INDEX}
  containers:
  - name: selenium-server
    image: ${x0_SELENIUM_DOCKER_IMAGE}
    imagePullPolicy: Always
  restartPolicy: Never
