kubernetes/template/14-test-run.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ${x0_APP_ID}-${x0_APP_ENV}-test-run
  namespace: ${x0_NAMESPACE}
spec:
  serviceAccountName: ci-builder
  automountServiceAccountToken: false
  containers:
  - name: test-run
    image: ghcr.io/webcodex1/${x0_APP_ID}-test:latest
    imagePullPolicy: IfNotPresent
  restartPolicy: Never
