kubernetes/template/15-dns-utils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: x0-app
spec:
  containers:
  - name: dnsutils
    image: registry.k8s.io/e2e-test-images/jessie-dnsutils:1.7
    command:
      - sleep
      - "infinity"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
