kubernetes/template/03-ingress-minikube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${x0_APP_ID}-${x0_VHOST_ID}-${x0_APP_ENV}-minikube-ingress
  namespace: ${x0_NAMESPACE}
spec:
  ingressClassName: nginx
  rules:
  - host: ${x0_APP_VHOST_DNS}
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: ${x0_APP_ID}-${x0_VHOST_ID}-${x0_APP_ENV}-svc
              port:
                number: 80
