kubernetes/template/04-ingress-controller-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/name: ${x0_INGRESS_CONTROLLER_ID}
  name: ${x0_INGRESS_CONTROLLER_ID}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/name: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/part-of: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/version: 1.8.0
  name: ${x0_INGRESS_CONTROLLER_ID}-controller
  namespace: ${x0_INGRESS_CONTROLLER_ID}
  annotations:
    loadbalancer.openstack.org/proxy-protocol: "true"
spec:
  externalTrafficPolicy: Local
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/name: ${x0_INGRESS_CONTROLLER_ID}
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/name: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/part-of: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/version: 1.8.0
  name: ${x0_INGRESS_CONTROLLER_ID}-controller-admission
  namespace: ${x0_INGRESS_CONTROLLER_ID}
spec:
  ports:
  - appProtocol: https
    name: https-webhook
    port: 443
    targetPort: webhook
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/name: ${x0_INGRESS_CONTROLLER_ID}
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/name: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/part-of: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/version: 1.8.0
  name: ${x0_INGRESS_CONTROLLER_ID}-controller
  namespace: ${x0_INGRESS_CONTROLLER_ID}
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ${x0_INGRESS_CONTROLLER_ID}
      app.kubernetes.io/name: ${x0_INGRESS_CONTROLLER_ID}
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: ${x0_INGRESS_CONTROLLER_ID}
        app.kubernetes.io/name: ${x0_INGRESS_CONTROLLER_ID}
        app.kubernetes.io/part-of: ${x0_INGRESS_CONTROLLER_ID}
        app.kubernetes.io/version: 1.8.0
    spec:
      containers:
      - args:
        - /nginx-ingress-controller
        - --publish-service=$(POD_NAMESPACE)/${x0_INGRESS_CONTROLLER_ID}-controller
        - --election-id=${x0_INGRESS_CONTROLLER_ID}-leader
        - --controller-class=k8s.io/${x0_INGRESS_CONTROLLER_ID}
        - --ingress-class=class-${x0_INGRESS_CONTROLLER_ID}
        - --configmap=$(POD_NAMESPACE)/${x0_INGRESS_CONTROLLER_ID}-controller
        - --validating-webhook=:8443
        - --validating-webhook-certificate=/usr/local/certificates/cert
        - --validating-webhook-key=/usr/local/certificates/key
        image: registry.k8s.io/ingress-nginx/controller:v1.8.0@sha256:744ae2afd433a395eeb13dc03d3313facba92e96ad71d9feaafc85925493fee3
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /wait-shutdown
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: controller
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 8443
          name: webhook
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 90Mi
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 101
        volumeMounts:
        - mountPath: /usr/local/certificates/
          name: webhook-cert
          readOnly: true
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: ${x0_INGRESS_CONTROLLER_ID}
      terminationGracePeriodSeconds: 300
      volumes:
      - name: webhook-cert
        secret:
          secretName: ${x0_INGRESS_CONTROLLER_ID}-admission
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/name: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/part-of: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/version: 1.8.0
  name: class-${x0_INGRESS_CONTROLLER_ID}
spec:
  controller: k8s.io/${x0_INGRESS_CONTROLLER_ID}
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/name: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/part-of: ${x0_INGRESS_CONTROLLER_ID}
    app.kubernetes.io/version: 1.8.0
  name: ${x0_INGRESS_CONTROLLER_ID}-admission
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ${x0_INGRESS_CONTROLLER_ID}-controller-admission
      namespace: ${x0_INGRESS_CONTROLLER_ID}
      path: /networking/v1/ingresses
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.nginx.ingress.kubernetes.io
  rules:
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
  sideEffects: None
